// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article in a list renders correctly 1`] = `
<article>
  <header>
    <Styled(Heading)
      level="h2"
    >
      <Link
        href="/test-slug"
      >
        Test Article
      </Link>
    </Styled(Heading)>
    <Styled(p)>
      <time
        dateTime="2019-02-05T01:17:07.551Z"
      >
        Monday, February 4, 2019
      </time>
       — 
      5
       minute read
    </Styled(p)>
    <Styled(span) />
  </header>
  <Markdown
    htmlAst={
      Object {
        "excerpted": true,
      }
    }
  />
  <Styled(footer)>
    <Link
      href="/test-slug"
    >
      Read More…
    </Link>
  </Styled(footer)>
</article>
`;

exports[`Article standalone renders correctly 1`] = `
<article>
  <header>
    <Styled(Heading)
      level="h1"
    >
      Test Article
    </Styled(Heading)>
    <Styled(p)>
      <time
        dateTime="2019-02-05T01:17:07.551Z"
      >
        Monday, February 4, 2019
      </time>
       — 
      5
       minute read
    </Styled(p)>
  </header>
  <Markdown
    htmlAst={
      Object {
        "excerpted": false,
      }
    }
  />
</article>
`;
